--- a/TPFinalLautaroMartinez/index.html
+++ b/TPFinalLautaroMartinez/index.html
@@ -237,29 +237,29 @@
             <article>
                 <img src="/imgs/mapa.PNG" width="1000px" height="450px">
             </article>
-        </section>
         <article class="roba-datos">
             <h2>Quieres ayudar de manera más personal? Registrate y obten novedades!</h2>
             <form action="#" method="post">
-                <article class="form-group">
+                <article>
                     <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
                 </article>
-                <article class="form-group">
+                <article>
                     <label for="apellido">Apellido:</label>
                     <input type="text" id="apellido" name="apellido" required>
                 </article>
-                <article class="form-group">
+                <article>
                      <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
                 </article>
-                <article class="form-group">
+                <article>
                      <label for="telefono">Número de Teléfono:</label>
                     <input type="tel" id="telefono" name="telefono">
                     </article>
                     <button type="submit">Enviar Datos</button>
             </form>
         </article>
+        </section>
     </main>
     <footer id="fot">
         <ul>
